# ComfyUI-DirectXTex

./: .gitignore  CMakeLists.txt  README.md  __init__.py  build.bat  dds_pybind.cpp  requirements.txt  setup.py
py/: ImageLoaderCrawl.py  LoadDDSNode.py  SaveDDSNode.py  SaveImageWithPath.py
workflows/: DDS_Flux2Klein_BatchEnhance_(skyrim_example).json
